project/keycloak-standalone.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0.1
        args: ["start-dev"]
        ports:
        - containerPort: 8080
        resources:
          requests:
            cpu: 200m
            memory: 512Mi
          limits:
            cpu: "1"
            memory: 1Gi
        readinessProbe:
          httpGet:
            path: /realms/master
            port: 8080
          initialDelaySeconds: 90
          periodSeconds: 10
          failureThreshold: 10



#kubectl set env deployment/keycloak -n keycloak \
#  KC_PROXY=edge \
#  KC_HOSTNAME_STRICT=false \
#  KC_HOSTNAME_STRICT_HTTPS=false \
#  KC_HTTP_ENABLED=true \
#  KC_HOSTNAME_DEBUG=true

#kubectl rollout status deployment/keycloak -n keycloak --timeout=300s
