project/keycloak-deny-all.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: keycloak
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
